--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "4.0.x",
     "gulp-babel": "^8.0.0",
     "gulp-csso": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
